--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -102,7 +102,7 @@ header nav button:hover {
 ============================ */
 section {
   width: 100%;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
 
@@ -111,7 +111,7 @@ section {
 ============================ */
 
 .intro {
-  background-image: url(../assets/img_intro_XPENEM.png);
+  background-image: url(../assets/img_intro_XPENEM.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -178,7 +178,7 @@ section {
   display: flex;
   flex-direction: column;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1.5rem;
+  gap: 1rem;
   background-color: white;
   padding: 2%;
   border-radius: 10px;
@@ -302,7 +302,6 @@ select:focus {
   border-radius: 16px;
   text-align: center;
   animation: fadeIn 0.4s ease;
-
 }
 
 .home-title {
@@ -327,7 +326,7 @@ select:focus {
   align-items: stretch;
   width: 100%;
   height: 327px;
-  margin: 20px auto;
+  margin: 1.5rem auto;
   gap: 30px;
 }
 
